Value help for BinArea,Aircraft,GR,PO Subcat

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -90,6 +90,30 @@
 				"settings": {},
 				"preload": false,
 				"uri": "localjson/sampledata.json"
+			},
+            "bin": {
+				"type": "sap.ui.model.json.JSONModel",
+				"settings": {},
+				"preload": false,
+				"uri": "localjson/binlocations.json"
+			},
+            "aircraft": {
+				"type": "sap.ui.model.json.JSONModel",
+				"settings": {},
+				"preload": false,
+				"uri": "localjson/aircraftnumbers.json"
+			},
+            "podata": {
+				"type": "sap.ui.model.json.JSONModel",
+				"settings": {},
+				"preload": false,
+				"uri": "localjson/podata.json"
+			},
+            "grdata": {
+				"type": "sap.ui.model.json.JSONModel",
+				"settings": {},
+				"preload": false,
+				"uri": "localjson/grdata.json"
 			}
 		},
 		"services": {
