--- a/ui5-deploy.yaml
+++ b/ui5-deploy.yaml
@@ -17,7 +17,7 @@ builder:
           destination: RTM_100
           url: http://hclsdrtm.hcldigilabs.com:8000
         app:
-          name: ZQM_NCR
+          name: Z_QM_NCR
           description: QM NCR Application
           package: Z_AB_FIORI
           transport: RTMK900372
