--- a/ui5-deploy.yaml
+++ b/ui5-deploy.yaml
@@ -14,10 +14,10 @@ builder:
       afterTask: generateCachebusterInfo
       configuration:
         target:
-          destination: RTM_100
-          url: http://hclsdrtm.hcldigilabs.com:8000
+          destination: DFC
+          url: http://dfc-bas:443
         app:
           name: Z_QM_NCR
           description: QM NCR Application
           package: Z_AB_FIORI
-          transport: RTMK900372
+          transport: DFCK900025
